--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,16 @@
 
 /* Styles */
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(2px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 html,
 body {
@@ -128,8 +138,6 @@ html.dark {
     }
 }
 
-
-
 @layer base {
   * {
     @apply border-border;
@@ -137,4 +145,8 @@ html.dark {
   body {
     @apply bg-background text-foreground;
     }
+}
+
+.animate-ping {
+  animation: ping 1s ease-in-out infinite;
 }
